WIP. whitespace fixes, re-writing analyzing.

--- a/chess_stats/static/css/base_styles.css
+++ b/chess_stats/static/css/base_styles.css
@@ -21,3 +21,8 @@ footer {
     margin: 7em auto;
     text-align: center;
 }
+
+a:hover {
+    text-decoration: none;
+    color: navy;
+}
