--- a/chess_stats/static/css/browse_games_styles.css
+++ b/chess_stats/static/css/browse_games_styles.css
@@ -6,6 +6,13 @@
 
 .game-table td {
     text-align: center;
+    overflow: hidden;
+}
+
+.user-column {
+    overflow: hidden;
+    min-width: 120px;
+    max-width: 100px;
 }
 
 .game-table th {
